Include migrations via setup.py.
Fixes crash during unittests where the auth tables aren't yet populated.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include LICENSE
+recursive-include stickymessages/migrations *
 recursive-include stickymessages/templates *
 recursive-include docs *
